Exclude loopback netif from set of netifs given by 'any' specifier